# ergovalidation

./: Cargo.toml  README.md
src/: disk_index.rs  lib.rs  main.rs  node.rs
