[package]
name = "ergovalidation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ergo-lib = { path = "../sigma-rust/ergo-lib" }
serde_json = "1.0.113"
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
async-stream = "0.3.5"
